--- a/generator.html
+++ b/generator.html
@@ -16,6 +16,7 @@
       content="ambigram generator, ambigram creator, ambigram maker, free ambigram generator, ambigram tattoo generator, two word ambigram generator, online free"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+     <link rel="canonical" href="https://ambigramgenerator.me/generator" />
     <link
       href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
@@ -90,101 +91,34 @@
     </script>
   </head>
   <body class="bg-light text-dark font-sans">
-    <header class="bg-white shadow-md sticky top-0 z-50">
-      <div
-        class="container mx-auto px-4 py-4 flex justify-between items-center"
-      >
-        <a
-          href="/"
-          class="text-xl font-bold text-dark hover:text-primary transition-colors"
-          >AmbigramGenerator.me</a
-        >
-        <nav id="main-nav" class="hidden md:flex items-center space-x-6">
-          <a
-            href="/generator.html"
-            class="text-primary border-b-2 border-primary font-medium transition-colors"
-            >2D Generator</a
-          >
-          <a
-            href="/3d-generator.html"
-            class="text-dark hover:text-primary font-medium transition-colors"
-            >3D Generator</a
-          >
-          <a
-            href="/what-is-ambigram.html"
-            class="text-dark hover:text-primary font-medium transition-colors"
-            >What is an Ambigram</a
-          >
-          <a href="/tattoo-design.html" class="font-medium transition-colors"
-            >Design Guides</a
-          >
-          <a
-            href="/generator.html"
-            class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors"
-            >Start Creating</a
-          >
-          <a
-            href="./privacy.html"
-            class="text-dark hover:text-primary font-medium transition-colors"
-            >Privacy Policy</a
-          >
-          <a
-            href="./terms.html"
-            class="text-dark hover:text-primary font-medium transition-colors"
-            >Terms of Service</a
-          >
-        </nav>
-        <button
-          id="mobile-menu-btn"
-          class="md:hidden text-dark text-xl"
-          aria-label="Toggle Navigation"
-        >
-          <i class="fa fa-bars"></i>
-        </button>
-      </div>
-      <!-- Mobile Menu -->
-      <div
-        id="mobile-menu"
-        class="hidden md:hidden bg-white border-t border-gray-200"
-      >
-        <a
-          href="/generator"
-          class="block py-2 px-4 bg-primary/10 text-primary font-medium"
-          >2D Generator</a
-        >
-        <a
-          href="/3d-generator"
-          class="block py-2 px-4 text-dark hover:bg-gray-100"
-          >3D Generator</a
-        >
-        <a
-          href="/what-is-ambigram"
-          class="block py-2 px-4 text-dark hover:bg-gray-100"
-          >What is an Ambigram</a
-        >
-        <a
-          href="/tattoo-design"
-          class="block py-2 px-4 text-dark hover:bg-gray-100"
-          >Design Guides</a
-        >
-        <a
-          href="./privacy.html"
-          class="block py-2 px-4 text-dark hover:bg-gray-100"
-          >Privacy Policy</a
-        >
-        <a
-          href="./terms.html"
-          class="block py-2 px-4 text-dark hover:bg-gray-100"
-          >Terms of Service</a
-        >
-        <div class="p-4">
-          <a
-            href="/generator"
-            class="block text-center bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors w-full"
-            >Start Creating</a
-          >
+       <header class="bg-white shadow-md sticky top-0 z-50">
+        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+            <a href="/" class="text-xl font-bold text-dark hover:text-primary transition-colors">AmbigramGenerator.me</a>
+          <nav id="main-nav" class="hidden md:flex items-center space-x-6">
+    <a href="/generator" class="text-dark hover:text-primary font-medium transition-colors">2D Generator</a>
+    <a href="/3d-generator" class="text-dark hover:text-primary font-medium transition-colors">3D Generator</a>
+    <a href="/what-is-ambigram.html" class="text-dark hover:text-primary font-medium transition-colors">What is an Ambigram</a>
+    <a href="/tattoo-design.html" class="font-medium transition-colors">Design Guides</a>
+    <a href="#generator" class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Start Creating</a>
+    <a href="/privacy" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
+    <a href="/terms" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
+</nav>
+            <button id="mobile-menu-btn" class="md:hidden text-dark text-xl" aria-label="Toggle Navigation">
+                <i class="fa fa-bars"></i>
+            </button>
         </div>
-      </div>
+         <!-- Mobile Menu -->
+        <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
+            <a href="/generator" class="block py-2 px-4 text-dark hover:bg-gray-100">2D Generator</a>
+            <a href="/3d-generator" class="block py-2 px-4 text-dark hover:bg-gray-100">3D Generator</a>
+            <a href="/what-is-ambigram.html" class="block py-2 px-4 text-dark hover:bg-gray-100">What is an Ambigram</a>
+            <a href="/tattoo-design.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Design Guides</a>
+            <a href="/privacy" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
+            <a href="/terms" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
+            <div class="p-4">
+                <a href="#generator" class="block text-center bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors w-full">Start Creating</a>
+            </div>
+        </div>
     </header>
 
     <main>
