--- a/tattoo-design.html
+++ b/tattoo-design.html
@@ -7,6 +7,8 @@
     <meta name="description" content="The definitive guide to ambigram tattoos. Learn to choose the best ambigram fonts, ideal placements, and get design ideas for a perfect, legible two-name ambigram tattoo.">
     <meta name="keywords" content="ambigram tattoo design, ambigram tattoo generator, two-name ambigram tattoo, ambigram fonts for tattoos, best ambigram tattoo maker, tattoo design guide">
     <meta name="google-adsense-account" content="ca-pub-3383070348689557">
+
+     <link rel="canonical" href="https://ambigramgenerator.me/tattoo-design" />
     
     <!-- Stylesheets & Fonts -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -51,15 +53,15 @@
     <header class="bg-white shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <a href="/" class="text-xl font-bold text-dark hover:text-primary transition-colors">AmbigramGenerator.me</a>
-            <nav id="main-nav" class="hidden md:flex items-center space-x-6">
-                <a href="/generator.html" class="text-dark hover:text-primary font-medium transition-colors">2D Generator</a>
-                <a href="/3d-generator.html" class="text-dark hover:text-primary font-medium transition-colors">3D Generator</a>
-                <a href="/what-is-ambigram.html" class="text-dark hover:text-primary font-medium transition-colors">What is an Ambigram</a>
-                <a href="/tattoo-design.html" class="text-primary border-b-2 border-primary font-medium transition-colors">Design Guides</a>
-                <a href="/generator.html" class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Start Creating</a>
-                <a href="./privacy.html" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
-                <a href="./terms.html" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
-            </nav>
+          <nav id="main-nav" class="hidden md:flex items-center space-x-6">
+    <a href="/generator" class="text-dark hover:text-primary font-medium transition-colors">2D Generator</a>
+    <a href="/3d-generator" class="text-dark hover:text-primary font-medium transition-colors">3D Generator</a>
+    <a href="/what-is-ambigram.html" class="text-dark hover:text-primary font-medium transition-colors">What is an Ambigram</a>
+    <a href="/tattoo-design.html" class="font-medium transition-colors">Design Guides</a>
+    <a href="#generator" class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Start Creating</a>
+    <a href="/privacy" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
+    <a href="/terms" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
+</nav>
             <button id="mobile-menu-btn" class="md:hidden text-dark text-xl" aria-label="Toggle Navigation">
                 <i class="fa fa-bars"></i>
             </button>
@@ -68,12 +70,12 @@
         <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
             <a href="/generator" class="block py-2 px-4 text-dark hover:bg-gray-100">2D Generator</a>
             <a href="/3d-generator" class="block py-2 px-4 text-dark hover:bg-gray-100">3D Generator</a>
-            <a href="/what-is-ambigram" class="block py-2 px-4 text-dark hover:bg-gray-100">What is an Ambigram</a>
-            <a href="/tattoo-design" class="block py-2 px-4 bg-primary/10 text-primary font-medium">Design Guides</a>
-            <a href="./privacy.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
-            <a href="./terms.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
+            <a href="/what-is-ambigram.html" class="block py-2 px-4 text-dark hover:bg-gray-100">What is an Ambigram</a>
+            <a href="/tattoo-design.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Design Guides</a>
+            <a href="/privacy" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
+            <a href="/terms" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
             <div class="p-4">
-                <a href="/generator" class="block text-center bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors w-full">Start Creating</a>
+                <a href="#generator" class="block text-center bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors w-full">Start Creating</a>
             </div>
         </div>
     </header>
