--- a/what-is-ambigram.html
+++ b/what-is-ambigram.html
@@ -8,7 +8,7 @@
       name="description"
       content="Detailed guide on what an ambigram is. Learn the definition, explore key types like rotational, reflective, and two-name ambigrams, and discover their fascinating history."
     />
-    <meta name="google-adsense-account" content="ca-pub-3383070348689557">
+    <meta name="google-adsense-account" content="ca-pub-3383070348689557" />
     <meta
       name="keywords"
       content="what is an ambigram, ambigram definition, types of ambigrams, rotational ambigram, reflective ambigram, two-name ambigram, ambigram history, ambigram creator guide"
@@ -19,19 +19,35 @@
       rel="stylesheet"
     />
 
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3383070348689557" crossorigin="anonymous"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N55FBP8DJ2"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3383070348689557"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-N55FBP8DJ2"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
-      gtag('config', 'G-N55FBP8DJ2');
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-N55FBP8DJ2");
     </script>
     <script type="text/javascript">
-      (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
       })(window, document, "clarity", "script", "ti80pje0n3");
     </script>
     <script>
@@ -62,33 +78,94 @@
   </head>
   <body class="bg-light text-dark font-sans">
     <header class="bg-white shadow-md sticky top-0 z-50">
-        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="/" class="text-xl font-bold text-dark hover:text-primary transition-colors">AmbigramGenerator.me</a>
-            <nav id="main-nav" class="hidden md:flex items-center space-x-6">
-                <a href="/generator.html" class="text-dark hover:text-primary font-medium transition-colors">2D Generator</a>
-                <a href="/3d-generator.html" class="text-dark hover:text-primary font-medium transition-colors">3D Generator</a>
-                <a href="/what-is-ambigram.html" class="text-primary border-b-2 border-primary font-medium transition-colors">What is an Ambigram</a>
-                <a href="/tattoo-design.html" class="font-medium transition-colors">Design Guides</a>
-                <a href="/generator.html" class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Start Creating</a>
-                <a href="./privacy.html" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
-                <a href="./terms.html" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
-            </nav>
-            <button id="mobile-menu-btn" class="md:hidden text-dark text-xl" aria-label="Toggle Navigation">
-                <i class="fa fa-bars"></i>
-            </button>
+      <div
+        class="container mx-auto px-4 py-4 flex justify-between items-center"
+      >
+        <a
+          href="/"
+          class="text-xl font-bold text-dark hover:text-primary transition-colors"
+          >AmbigramGenerator.me</a
+        >
+        <nav id="main-nav" class="hidden md:flex items-center space-x-6">
+          <a
+            href="/generator"
+            class="text-dark hover:text-primary font-medium transition-colors"
+            >2D Generator</a
+          >
+          <a
+            href="/3d-generator"
+            class="text-dark hover:text-primary font-medium transition-colors"
+            >3D Generator</a
+          >
+          <a
+            href="/what-is-ambigram.html"
+            class="text-dark hover:text-primary font-medium transition-colors"
+            >What is an Ambigram</a
+          >
+          <a href="/tattoo-design.html" class="font-medium transition-colors"
+            >Design Guides</a
+          >
+          <a
+            href="#generator"
+            class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors"
+            >Start Creating</a
+          >
+          <a
+            href="/privacy"
+            class="text-dark hover:text-primary font-medium transition-colors"
+            >Privacy Policy</a
+          >
+          <a
+            href="/terms"
+            class="text-dark hover:text-primary font-medium transition-colors"
+            >Terms of Service</a
+          >
+        </nav>
+        <button
+          id="mobile-menu-btn"
+          class="md:hidden text-dark text-xl"
+          aria-label="Toggle Navigation"
+        >
+          <i class="fa fa-bars"></i>
+        </button>
+      </div>
+      <!-- Mobile Menu -->
+      <div
+        id="mobile-menu"
+        class="hidden md:hidden bg-white border-t border-gray-200"
+      >
+        <a href="/generator" class="block py-2 px-4 text-dark hover:bg-gray-100"
+          >2D Generator</a
+        >
+        <a
+          href="/3d-generator"
+          class="block py-2 px-4 text-dark hover:bg-gray-100"
+          >3D Generator</a
+        >
+        <a
+          href="/what-is-ambigram.html"
+          class="block py-2 px-4 text-dark hover:bg-gray-100"
+          >What is an Ambigram</a
+        >
+        <a
+          href="/tattoo-design.html"
+          class="block py-2 px-4 text-dark hover:bg-gray-100"
+          >Design Guides</a
+        >
+        <a href="/privacy" class="block py-2 px-4 text-dark hover:bg-gray-100"
+          >Privacy Policy</a
+        >
+        <a href="/terms" class="block py-2 px-4 text-dark hover:bg-gray-100"
+          >Terms of Service</a
+        >
+        <div class="p-4">
+          <a
+            href="#generator"
+            class="block text-center bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors w-full"
+            >Start Creating</a
+          >
         </div>
-         <!-- Mobile Menu -->
-        <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
-            <a href="/generator" class="block py-2 px-4 text-dark hover:bg-gray-100">2D Generator</a>
-            <a href="/3d-generator" class="block py-2 px-4 text-dark hover:bg-gray-100">3D Generator</a>
-            <a href="/what-is-ambigram" class="block py-2 px-4 bg-primary/10 text-primary font-medium">What is an Ambigram</a>
-            <a href="/tattoo-design" class="block py-2 px-4 text-dark hover:bg-gray-100">Design Guides</a>
-            <a href="./privacy.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
-            <a href="./terms.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
-            <div class="p-4">
-                <a href="/generator" class="block text-center bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors w-full">Start Creating</a>
-            </div>
-        </div>
+      </div>
     </header>
 
     <main>
@@ -184,7 +261,6 @@
                   the <strong>Two-Name Ambigram</strong>, where Word A is read
                   right-side-up, and Word B is read upside-down.
                 </p>
-                
               </div>
 
               <div
@@ -231,12 +307,12 @@
                     class="text-primary font-semibold hover:underline"
                     >Explore 3D Ambigram Technology.</a
                   >
-                         <img
-                  src="./image/3D ambigram physical object showing Light from the front and Shadow from the 180° view.png"
-                  alt="Reflective Ambigram example for the word Symmetry, readable both upright and when flipped"
-                  class="w-full max-w-md mx-auto h-auto rounded-lg shadow-xl border border-gray-300 mt-4"
-                  loading="lazy"
-                />
+                  <img
+                    src="./image/3D ambigram physical object showing Light from the front and Shadow from the 180° view.png"
+                    alt="Reflective Ambigram example for the word Symmetry, readable both upright and when flipped"
+                    class="w-full max-w-md mx-auto h-auto rounded-lg shadow-xl border border-gray-300 mt-4"
+                    loading="lazy"
+                  />
                 </p>
               </div>
             </div>
