--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- 网址宣称 -->
+         <link rel="canonical" href="https://ambigramgenerator.me/" />
     <!-- Stylesheets & Fonts -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link
@@ -102,13 +104,13 @@
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <a href="/" class="text-xl font-bold text-dark hover:text-primary transition-colors">AmbigramGenerator.me</a>
           <nav id="main-nav" class="hidden md:flex items-center space-x-6">
-    <a href="./generator.html" class="text-dark hover:text-primary font-medium transition-colors">2D Generator</a>
-    <a href="./3d-generator.html" class="text-dark hover:text-primary font-medium transition-colors">3D Generator</a>
+    <a href="/generator" class="text-dark hover:text-primary font-medium transition-colors">2D Generator</a>
+    <a href="/3d-generator" class="text-dark hover:text-primary font-medium transition-colors">3D Generator</a>
     <a href="/what-is-ambigram.html" class="text-dark hover:text-primary font-medium transition-colors">What is an Ambigram</a>
     <a href="/tattoo-design.html" class="font-medium transition-colors">Design Guides</a>
     <a href="#generator" class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Start Creating</a>
-    <a href="./privacy.html" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
-    <a href="./terms.html" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
+    <a href="/privacy" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
+    <a href="/terms" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
 </nav>
             <button id="mobile-menu-btn" class="md:hidden text-dark text-xl" aria-label="Toggle Navigation">
                 <i class="fa fa-bars"></i>
@@ -116,12 +118,12 @@
         </div>
          <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
-            <a href="./generator.html" class="block py-2 px-4 text-dark hover:bg-gray-100">2D Generator</a>
-            <a href="./3d-generator.html" class="block py-2 px-4 text-dark hover:bg-gray-100">3D Generator</a>
+            <a href="/generator" class="block py-2 px-4 text-dark hover:bg-gray-100">2D Generator</a>
+            <a href="/3d-generator" class="block py-2 px-4 text-dark hover:bg-gray-100">3D Generator</a>
             <a href="/what-is-ambigram.html" class="block py-2 px-4 text-dark hover:bg-gray-100">What is an Ambigram</a>
             <a href="/tattoo-design.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Design Guides</a>
-            <a href="./privacy.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
-            <a href="./terms.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
+            <a href="/privacy" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
+            <a href="/terms" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
             <div class="p-4">
                 <a href="#generator" class="block text-center bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors w-full">Start Creating</a>
             </div>
