--- a/generator.html
+++ b/generator.html
@@ -16,7 +16,7 @@
       content="ambigram generator, ambigram creator, ambigram maker, free ambigram generator, ambigram tattoo generator, two word ambigram generator, online free"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-     <link rel="canonical" href="https://ambigramgenerator.me/generator" />
+     <link rel="canonical" href="https://www.ambigramgenerator.me/generator" />
     <link
       href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
