--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- 网址宣称 -->
-         <link rel="canonical" href="https://ambigramgenerator.me/" />
+         <link rel="canonical" href="https://www.ambigramgenerator.me/" />
     <!-- Stylesheets & Fonts -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link
