--- a/privacy.html
+++ b/privacy.html
@@ -9,7 +9,7 @@
       content="Privacy policy for AmbigramGenerator.me, explaining how we handle your data and protect your privacy."
     />
     <script src="https://cdn.tailwindcss.com"></script>
-     <link rel="canonical" href="https://ambigramgenerator.me/privacy" />
+     <link rel="canonical" href="https://www.ambigramgenerator.me/privacy" />
     <link
       href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
