--- a/tattoo-generator.html
+++ b/tattoo-generator.html
@@ -18,7 +18,7 @@
     <meta name="description" content="Create amazing ambigram tattoo designs with our free generator. Design custom word art tattoos that look great from multiple angles. Perfect for unique ink ideas.">
     <meta name="keywords" content="ambigram tattoo generator, tattoo ambigram maker, custom tattoo designs, word art tattoos, ambigram ink ideas, free tattoo generator">
     <script src="https://cdn.tailwindcss.com"></script>
-     <link rel="canonical" href="https://ambigramgenerator.me/tattoo-generator" />
+     <link rel="canonical" href="https://www.ambigramgenerator.me/tattoo-generator" />
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
