--- a/terms.html
+++ b/terms.html
@@ -9,7 +9,7 @@
       content="Terms of service for using AmbigramGenerator.me, including usage rights and restrictions."
     />
     <script src="https://cdn.tailwindcss.com"></script>
-     <link rel="canonical" href="https://ambigramgenerator.me/terms" />
+     <link rel="canonical" href="https://www.ambigramgenerator.me/terms" />
     <link
       href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
