--- a/3d-generator.html
+++ b/3d-generator.html
@@ -9,7 +9,7 @@
     <meta name="google-adsense-account" content="ca-pub-3383070348689557">
     <!-- Stylesheets & Fonts -->
     <script src="https://cdn.tailwindcss.com"></script>
-     <link rel="canonical" href="https://ambigramgenerator.me/3d-generator" />
+     <link rel="canonical" href="https://www.ambigramgenerator.me/3d-generator" />
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Montserrat:wght@700;800&display=swap" rel="stylesheet">
     
