--- a/tattoo-design.html
+++ b/tattoo-design.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="ambigram tattoo design, ambigram tattoo generator, two-name ambigram tattoo, ambigram fonts for tattoos, best ambigram tattoo maker, tattoo design guide">
     <meta name="google-adsense-account" content="ca-pub-3383070348689557">
 
-     <link rel="canonical" href="https://ambigramgenerator.me/tattoo-design" />
+     <link rel="canonical" href="https://www.ambigramgenerator.me/tattoo-design" />
     
     <!-- Stylesheets & Fonts -->
     <script src="https://cdn.tailwindcss.com"></script>
